# vulkan-game-engine

./: README.md  VulkanTest.sln
VulkanTest/: CMakeLists.txt  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  bulletCustom.cpp  bulletCustom.h  engine.h  input.cpp  input.h  main.cpp  objects.cpp  objects.h  render.cpp  render.h  scene.cpp  scene.h  threading.cpp  threading.h  util.h  vkheaderutil.h
VulkanTest/shaders/: compile.bat  frag.spv  fragment.frag  shadowmapf.frag  shadowmapv.spv  shadowmapv.vert  skybox.frag  skybox.vert  skyboxf.spv  skyboxv.spv  vert.spv  vertex.vert
VulkanTest/textures/: oad.ktx2  oadskybox.ktx2
